various swagger fixes, added controller tests
